--- a/workflows/interesting-workflow/env0.workflow.yml
+++ b/workflows/interesting-workflow/env0.workflow.yml
@@ -1,1 +1,30 @@
-
+environments:
+  root:
+    name: root
+    templateName: 'Null'
+    workspaceName: ${WS}1
+  mid:
+    name: mid
+    templateName: 'Null'
+    workspaceName: ${WS}2
+    needs:
+      - root
+  fork1:
+    name: fork1
+    templateName: 'Null'
+    workspaceName: ${WS}3
+    needs:
+      - mid
+  fork2:
+    name: fork2
+    templateName: 'Null'
+    workspaceName: ${WS}4
+    needs:
+      - mid
+  leaf:
+    name: leaf
+    templateName: 'Null'
+    workspaceName: ${WS}5
+    needs:
+      - fork1
+      - fork2
