--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -5,3 +5,9 @@ deploy:
     setupVariables:
       after: 
         - echo "Good morning!!"
+
+destroy:
+  steps:
+    setupVariables:
+      after: 
+        - failz
