--- a/TideNotWorks/env0.yml
+++ b/TideNotWorks/env0.yml
@@ -8,7 +8,7 @@ deploy:
         - ls -a
         - mkdir -p ~/.terraform.d/plugins/tideworks-terraform-provider-dev.tideworks.io/tideworks/buoy/1.0.3/linux_amd64
         - cp terraform-provider-buoy_v1.0.3 ~/.terraform.d/plugins/tideworks-terraform-provider-dev.tideworks.io/tideworks/buoy/1.0.3/linux_amd64
-        - mkdir -p .terraform.d/plugins/tideworks-terraform-provider-dev.tideworks.io/tideworks/buoy/1.0.3/linux_amd64
+        - mkdir -p .terraform/plugins/tideworks-terraform-provider-dev.tideworks.io/tideworks/buoy/1.0.3/linux_amd64
         - cp terraform-provider-buoy_v1.0.3 .terraform/providers/tideworks-terraform-provider-dev.tideworks.io/tideworks/buoy/1.0.3/linux_amd64
     terraformInit:
       after:
