--- a/wflow/env0.workflow.yml
+++ b/wflow/env0.workflow.yml
@@ -4,3 +4,7 @@ environments:
     templateName: Test
     workspace: workspace
     needs: []
+  service2:
+    name: service2
+    templateName: wflow2
+    needs: [service1]
