--- a/remote-backend/env0.yml
+++ b/remote-backend/env0.yml
@@ -3,5 +3,5 @@ version: 1
 deploy:
   steps:
     setupVariables:
-      before: 
-        - export TF_VAR_randomEnv=$RANDOM
+      after: 
+        - echo 123
