--- a/workflows/basic-workflow/env0.workflow.yml
+++ b/workflows/basic-workflow/env0.workflow.yml
@@ -2,14 +2,17 @@ environments:
   root:
     name: root
     templateName: 'Null'
+    workspace: ${WS}1
   leaf1:
     name: leaf1
     templateName: 'Null'
+    workspace: ${WS}2
     needs:
       - root
   leaf2:
     name: leaf2
     templateName: 'Null'
+    workspace: ${WS}3
     needs:
       - root
 settings:
