--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -5,4 +5,7 @@ deploy:
     setupVariables:
       after: 
         - echo "Good morning!!"
+
+    terraformInit:
+      before:
         - /opt/tfenv/bin/terraform workspace select $ENV0_WORKSPACE_NAME
