--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -4,4 +4,8 @@ deploy:
   steps:
     setupVariables:
       after: 
-        - echo "Good morning!!!"
+        - curl -H "Authorization: Bearer $TOFUENV_GITHUB_TOKEN" -X GET https://api.github.com/rate_limit
+
+    opentofuInit:
+      after:
+        - curl -H "Authorization: Bearer $TOFUENV_GITHUB_TOKEN" -X GET https://api.github.com/rate_limit
