--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -4,8 +4,10 @@ deploy:
   steps:
     setupVariables:
       after:
+        - echo "poop"
         - curl -H "Authorization: Bearer $TOFUENV_GITHUB_TOKEN" -X GET https://api.github.com/rate_limit
 
     opentofuInit:
       after:
+        - echo "poop"
         - curl -H "Authorization: Bearer $TOFUENV_GITHUB_TOKEN" -X GET https://api.github.com/rate_limit
