--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -3,14 +3,11 @@ version: 1
 deploy:
   steps:
     setupVariables:
-      after:
+      after: |
         - echo "poop"
-        - curl -H "Authorization: Bearer TOFUENV_GITHUB_TOKEN" -X GET https://api.github.com/rate_limit
-        - curl -H "Authorization: Bearer $TOFUENV_GITHUB_TOKEN" -X GET https://api.github.com/rate_limit
         - curl -H "Authorization: Bearer $TOFUENV_GITHUB_TOKEN" -X GET https://api.github.com/rate_limit
 
     opentofuInit:
-      after:
+      after: |
         - echo "poop"
-        - curl -H "Authorization: Bearer $TOFUENV_GITHUB_TOKEN" -X GET https://api.github.com/rate_limit
         - curl -H "Authorization: Bearer $TOFUENV_GITHUB_TOKEN" -X GET https://api.github.com/rate_limit
