--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -1,13 +1,17 @@
-version: 1
+version: 2
 
 deploy:
   steps:
     setupVariables:
-      after: |
-        - echo "poop"
-        - curl -H "Authorization: Bearer $TOFUENV_GITHUB_TOKEN" -X GET https://api.github.com/rate_limit
+      after:
+        name: Print Before
+        run: |
+          - echo "poop"
+          - curl -H "Authorization: Bearer $TOFUENV_GITHUB_TOKEN" -X GET https://api.github.com/rate_limit
 
     opentofuInit:
-      after: |
-        - echo "poop"
-        - curl -H "Authorization: Bearer $TOFUENV_GITHUB_TOKEN" -X GET https://api.github.com/rate_limit
+      after:
+        name: Print After
+        run: |
+          - echo "poop"
+          - curl -H "Authorization: Bearer $TOFUENV_GITHUB_TOKEN" -X GET https://api.github.com/rate_limit
