--- a/workflows/example-workflow/env0.workflow.yml
+++ b/workflows/example-workflow/env0.workflow.yml
@@ -1,7 +1,7 @@
 environments:
   vpc:
     name: 'VPC and Network'
-    templateName: 'VPC'
+    templateName: 'Null'
   db:
     name: DB
     templateName: 'DB'
