--- a/workflows/basic-workflow/env0.workflow.yml
+++ b/workflows/basic-workflow/env0.workflow.yml
@@ -15,3 +15,9 @@ environments:
     workspace: ${WS}3
     needs:
       - root
+  leaf3:
+    name: leaf3
+    templateName: 'Null'
+    workspace: ${WS}4
+    needs:
+      - root
